--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      Контакты в шапке
+        <a href="mailto:halzakal@gmail.com" class="header-email">halzakal@gmail.com</a>
+        <a href="tel:+79876543210" class="header-phone">+7 987 654 32 10</a>
     </div>
     </header>
 
@@ -22,21 +23,38 @@
     </section>
 
     <section class="intro">
+      <figure class="user-image">
+        <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+      </figure>
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
       <p>Текст о том, чем могу быть полезен.</p>
+      <div class="skills">
+      <h3>Мои навыки</h3>
+      <dl class="skills-list">
+        <dt class="skill-html">HTML</dt>
+    <dd class="level"><div style="width: 60%;">60%</div></dd>
+    <dt class="skill-css">CSS</dt>
+    <dd class="level"><div style="width: 40%;">40%</div></dd>
+      </dl>
     </div>
+    </div>
+    
     </section>
 
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+      </figure>
 
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
@@ -45,7 +63,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      Контакты в подвале
+        <a href="mailto:halzakal@gmail.com" class="footer-email">halzakal@gmail.com</a>
+        <a href="tel:+79876543210" class="footer-phone">+7 987 654 32 10</a>
     </div>
     </footer>
   </body>
